tests/good/misc/zero.pas
program Zero;

var
    N, i: integer;
begin
    ReadLn(N);
    for i := 0 to N - 1 do
        WriteLn(i)
end.
