tests/bad/pointer-deref-nonpointer.pas
program pointer_deref_nonpointer;
var
  x: integer;
begin
  x^ := 1;
end.
